Fix border and alignment issues

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -91,6 +91,7 @@ Grid
 
 .body-container {
   max-width: 990px;
+	margin: 0 auto;
 }
 
 nav {
@@ -114,7 +115,7 @@ aside {
 }
 
 article {
-  width: 25%;
+  width: calc(25% - 5px);
 }
 
 /*
@@ -123,8 +124,8 @@ Alignment and Margins
 ===============================
 */
 
-.vertical-ad {
-
+section {
+	
 }
 
 .vertical-ad p {
@@ -153,6 +154,11 @@ article {
 
 footer {
 	margin-left: calc(20% + 15px);
+	margin-right: 20px;
+}
+
+.article-center {
+
 }
 /*
 ==============================
